--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -103,7 +103,8 @@
 
 :root,
 [data-theme] {
-  background: var(--color-base-200);
+  /* background: var(--color-base-200); */
+  background: white;
 }
 
 .btn {
